[package]
name = "danbooru-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
dotenvy = "0.15.6"
hyper = { version = "0.14.24", features = ["http1", "client", "runtime", "tcp"] }
hyper-tls = "0.5.0"
indicatif = { version = "0.17.3", features = ["rayon", "tokio"] }
rayon = "1.7.0"
scraper = "0.15.0"
tokio = { version = "1.26.0", features = ["full"] }
urlencoding = "2.1.2"

