[package]
name = "danbooru-rs"
version = "1.0.17"
edition = "2021"
description = "A command-line client to download images from Danbooru"
authors = ["Tilted Toast"]
repository = "https://github.com/TiltedToast/danbooru-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
dotenvy = "0.15.6"
indicatif = { version = "0.17.3", features = ["rayon", "improved_unicode"] }
rayon = "1.7.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
scraper = "0.16.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
urlencoding = "2.1.2"
