[package]
name = "danbooru-rs"
version = "1.0.21"
edition = "2021"
description = "A command-line client to download images from Danbooru"
authors = ["Tilted Toast"]
repository = "https://github.com/tdortman/danbooru-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
dotenvy = "0.15.7"
indicatif = { version = "0.17.7", features = ["rayon", "improved_unicode"] }
rayon = "1.8.1"
reqwest = { version = "0.11.23", features = ["blocking"] }
scraper = "0.18.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
urlencoding = "2.1.3"
